Fix misaligned hamburger icon

--- a/css/global.css
+++ b/css/global.css
@@ -179,8 +179,8 @@ footer > * {
   .bar {
     display: block;
     width: 30px;
-    height: 4px;
-    margin: 6px 0;
+    height: 3px;
+    margin: 5px 0;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
     background-color: var(--cream);
